# rdfproxy

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  issue.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml  deptry.yml  mypy.yml  publish.yml  release-please.yml  ruff-formatter.yml  ruff-linter.yml  tests.yaml  tests.yml
concept/: index.html
docs/: index.md  reference.md
examples/: README.md  basic_fastapi_example.py  full_static_fastapi_example.py  full_static_fastapi_example_shared_aclient.py  model_bool_example.py  releven_person_example.py  releven_person_fastapi_example.py  wikidata_grouped_person_fastapi_example.py  wikidata_grouping_options.py  wikidata_person_fastapi_example.py  wikidata_ungrouped_person_fastapi_example.py
rdfproxy/: __init__.py  adapter.py  constructor.py  mapper.py  sparql_strategies.py  sparqlwrapper.py
rdfproxy/checks/: checkers.py  query_checks.py
rdfproxy/utils/: _exceptions.py  _types.py  _typing.py  exceptions.py  mapper_utils.py  model_utils.py  models.py  predicates.py  sparql_utils.py  type_utils.py  utils.py
reference/: index.html
sparql_fastapi/: __init__.py  adapter.py
sparql_fastapi/utils/: _types.py
tests/: conftest.py  test_construct_count_query.py  test_get_bindings_from_query_result.py  test_instantiate_model_from_bindings.py  test_instantiate_model_from_kwargs.py  test_sparql_model_adapter.py  test_temporary_query_override.py
tests/data/: init_model_from_kwargs_parameters.py  models.py
tests/tests_adapter/: test_adapter_check_query_sad_path.py  test_adapter_get_item.py  test_adapter_grouped_pagination.py  test_adapter_ungrouped_pagination.py  test_adapter_ungrouped_pagionation.py
tests/tests_constructor/: test_item_query_constructor.py  test_page_query_constructor.py  test_query_constructor_items_query.py
tests/tests_mapper/: test_model_bindings_mapper.py  test_model_bindings_mapper_grouped_nested_grouped.py  test_model_bindings_mapper_inconsistent_grouping.py  test_model_bindings_mapper_model_bool.py  test_model_bindings_mapper_nested_grouped_basic.py  test_model_bindings_mapper_nested_grouped_chains.py  test_model_bindings_mapper_nested_grouped_from_ungrouped.py  test_model_bindings_mapper_nested_grouped_model_basic.py  test_model_bindings_mapper_none_grouping.py  test_model_bindings_mapper_none_grouping_issue.py  test_model_bindings_mapper_ungrouped_nested_grouped.py  test_sad_path_mapper_grouped_models.py
tests/tests_sparqlwrapper/: test_basic_sparqlwrapper.py  test_sparqlwrapper_model_instantiation.py  test_sparqlwrapper_raise_http_status.py
tests/unit/: test_construct_count_query.py  test_construct_ungrouped_pagination_query.py  test_get_query_projection.py  test_inject_subquery.py  (+2 more)
tutorial/: index.html
(+60 files in other folders)
