[tool.poetry]
name = "rdfproxy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sparqlwrapper = "^2.0.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
deptry = "^0.20.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"


[tool.poetry.group.examples.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry.package_module_name_map]
sparqlwrapper = "SPARQLWrapper"

[tool.deptry]
extend_exclude = ["examples"]

[tool.pytest.ini_options]
markers = [
	"remote: Mark tests that connect to a remote service",
]