[tool.poetry]
name = "rdfproxy"
version = "0.2.0"
description = ""
authors = [
    "Birger Schacht <birger.schacht@oeaw.ac.at>",
    "Lukas Plank <lukas.plank@oeaw.ac.at>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sparqlwrapper = "^2.0.0"
pydantic = "^2.9.2"


httpx = "^0.28.1"
rdflib = "^7.1.1"
[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
deptry = "^0.20.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-randomly = "^3.15.0"


[tool.poetry.group.examples.dependencies]
fastapi = {extras = ["standard"], version = "^0.115.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry.package_module_name_map]
sparqlwrapper = "SPARQLWrapper"

[tool.deptry]
extend_exclude = ["examples"]

[tool.pytest.ini_options]
markers = [
	"remote: Mark tests that connect to a remote service",
]