[project]
name = "rdfproxy"
version = "0.6.0"
description = ""
authors = [
    { name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at" },
    { name = "Lukas Plank", email = "lukas.plank@oeaw.ac.at" },
]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.9.2,<3",
    "httpx>=0.28.1,<0.29",
    "rdflib>=7.1.1,<8",
    "pandas>=2.2.3,<3",
]

[dependency-groups]
dev = [
    "deptry>=0.20.0,<0.21",
    "pytest>=8.3.3,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-randomly>=3.15.0,<4",
    "mkdocstrings[python]>=0.27.0,<0.28",
    "mkdocs-material>=9.5.50,<10",
    "ruff>=0.11.4",
]
examples = [
    "fastapi[standard]>=0.115.8",
]

[tool.uv]
default-groups = [
    "dev",
    "examples",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.package_module_name_map]
sparqlwrapper = "SPARQLWrapper"

[tool.deptry]
extend_exclude = ["examples"]

[tool.pytest.ini_options]
markers = [
	"remote: Mark tests that connect to a remote service",
]
